# sulfate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bochsrc  bootBuild.sh  xmake.lua
assets/: linker.ld
assets/limine/: limine.conf
boot/: CMakeLists.txt  boot.asm  fat12.inc
docs/: README-list.md  README-zh_cn.md
include/: allocator.h  font.h  lib.h  linkage.h  memory.h  printk.h  stddef.h  stdint.h  string.h  type_traits.h  zig_lib.h
include/alloca/: alloca.h
include/asm/: unistd.h
include/cstdlib/: stddef.h  stdint.h
include/io/: color.h  iostream.h
include/stdlib/: memory.h  string.h
include/sulfate/: io.h
include/sulfate/asm/: processor.h  unistd.h
include/sulfate/driver/: pci.h  tty.h
include/sulfate/io/: iostream.h
include/sulfate/memory/: alloca.h  allocator.h  mmap.h
kernel/: CMakeLists.txt  Kernel.lds  head.S  main.c
src/: alloca.cpp  iostream.cpp  main.c  main.cpp  printk.c  string.cpp  test.zig
src/driver/: pci.cpp  tty.cpp
src/kernel/: main.cpp
src/memory/: kalloc.cpp
